Changes made by Greg Dix (greg@ididafrica.co.za).

--- a/TMG/pages/blog-tmg.html
+++ b/TMG/pages/blog-tmg.html
@@ -18,14 +18,14 @@
       
       <!--<h2 class="page_subtitle">Latest Posts</h2>-->
       <div id="categoryBtns" style="display: inline-block; width: 100%; position: fixed; z-index: 500; background-color: #1f1f1f; border-bottom: 1px solid #1c1c1c; border-top: 1px solid #1c1c1c; top: 45px; left: 0px; ">
-          <img width="30px" height="30px" style="margin: 5px; margin-left: 15px;" src="images/icons/fasion-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/lifestyle-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/lit-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/film-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/music-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/art-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/sneakers-icon.png" alt="" title="" onclick="" />
-          <img width="30px" height="30px" style="margin: 5px;" src="images/icons/more-icon.png" alt="" title="" onclick="" /> 
+          <img width="30px" height="30px" style="margin: 5px; margin-left: 15px;" id="fasion" src="images/icons/fasion-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <img width="30px" height="30px" style="margin: 5px;" id="lifestyle" src="images/icons/lifestyle-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <img width="30px" height="30px" style="margin: 5px;" id="literature" src="images/icons/lit-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <img width="30px" height="30px" style="margin: 5px;" id="film" src="images/icons/film-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <img width="30px" height="30px" style="margin: 5px;" id="music" src="images/icons/music-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <img width="30px" height="30px" style="margin: 5px;" id="art" src="images/icons/art-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <img width="30px" height="30px" style="margin: 5px;" id="sneakers" src="images/icons/sneakers-icon.png" alt="" title="" onclick="loadCatFilter(this.id)" />
+          <a href="#" data-panel="right" class="open-panel"><img width="30px" height="30px" style="margin: 5px;" src="images/icons/more-icon.png" alt="" title="" onclick="" /> </a>
       </div>
             <div class="list-block" style="margin-top: 40px;">
               <ul id="postList" class="posts">
