Changes made by Greg Dix (greg@ididafrica.co.za).

--- a/TMG/index.html
+++ b/TMG/index.html
@@ -327,7 +327,7 @@ function setHotlist(){
                       <div class="swiper-slide">
                           <!--<div style="height:100px"></div>
                        <span class="subtitle">[   data offline..   ]</span>-->
-                          <iframe src="http://test.stickyginger.co.za/tmg-wp-app/filter/get-posts-filteri-title.html" scrolling="auto" width="93%" height="90%" frameborder="0" style="padding: 5px"></iframe>
+                          <iframe src="http://test.stickyginger.co.za/tmg-wp-app/filter/get-posts-filteri-title.html" scrolling="auto" width="93%" height="85%" frameborder="0" style="padding: 8px"></iframe>
                           
                          <!-- <span>WITH <br />BEAUTIFUL</span>
                           <span class="subtitle">multipurpose designs</span>
@@ -360,13 +360,13 @@ function setHotlist(){
           </div>
         </div>
         <!-- Bottom Toolbar-->
-        <div class="toolbar">
+        <div class="toolbar" style="background-color: rgba(0, 0, 0, 0.5); height: 40px">
               <div class="toolbar-inner">
               <ul class="toolbar_icons icons_4row"><div style="width:10px"></div>
-              <li><a href="#" data-popup=".popup-medialist" class="open-popup"><img src="images/icons/white/user.png" alt="" title="" /></a></li>
-              <li><a href="pages/photos.html"><img src="images/icons/white/photos.png" alt="" title="" /></a></li>
-              <li><a href="#" data-popup=".popup-playlist" class="open-popup"><img src="images/icons/white/heart.png" alt="" title="" /></a></li>
-              <li><a href="pages/features.html" style="display:none;"><img src="images/icons/white/settings.png" alt="" title="" /></a></li>
+              <li><a href="#" data-popup=".popup-medialist" class="open-popup"><img src="images/left-arrows.png" alt="" title="" /></a></li>
+              <li><a href="pages/photos.html"><img src="images/play.png" alt="" title="" /></a></li>
+              <li><a href="#" data-popup=".popup-playlist" class="open-popup"><img src="images/right-arrows.png" alt="" title="" /></a></li>
+              <li><a href="pages/features.html" style=""><img src="images/mute.png" alt="" title="" /></a></li>
                   
               </ul>
               </div>  
